--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/ourservice.css">
     <!-- End Style -->
 </head>
 
 <body>
     <header class="p-2">
         <div class="d-flex align-items-center gap-2 justify-content-between px-5">
-            <a class="d-flex align-items-center gap-2 text-decoration-none" href="https://maps.app.goo.gl/QauwATgMaA2Bt1jP8" target="_blank"
-                rel="noopener noreferrer">
+            <a class="d-flex align-items-center gap-2 text-decoration-none"
+                href="https://maps.app.goo.gl/QauwATgMaA2Bt1jP8" target="_blank" rel="noopener noreferrer">
                 <i class="fa-solid fa-location-dot primary-color"></i>
                 <p class="font-small dark-color">
                     Avenida Manoel Teixeira Sampaio, 289 - Jardim Presidencial, Avaré, Brazil
@@ -66,11 +67,55 @@
                 <img src="https://img.freepik.com/fotos-premium/composicao-de-negocios-de-reparacao-de-automoveis_23-2147881823.jpg?w=1380" alt="aa">
             </div>
         </div> -->
-        <section class="apresentation"> 
-            <div class="card">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="card-inner"></div>
+        <section class="our-service">
+            <div class="our-service-title">
+                Nossos serviços
+            </div>
+            <div class="our-service-body">
+                <div class="card-service">
+
+                    <div class="card-service-img">
+
+                    </div>
+                    <div class="card-service-detail">
+                        <p>
+                            Reparação de freios
+                        </p>
+                    </div>
+                </div>
+                <div class="card-service">
+
+                    <div class="card-service-img">
+
+                    </div>
+                    <div class="card-service-detail">
+                        <p>
+                            Troca de óleo
+                        </p>
+                    </div>
+                </div>
+                <div class="card-service">
+
+                    <div class="card-service-img">
+
+                    </div>
+                    <div class="card-service-detail">
+                        <p>
+                            Alinhamento e Balanceamento
+                        </p>
+                    </div>
+                </div>
+                <div class="card-service">
+
+                    <div class="card-service-img">
+
+                    </div>
+                    <div class="card-service-detail">
+                        <p>
+                            Troca de pneu
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <a class="btn-whats shadow-lg" href="https://wa.me/5514998464904" target="_blank" rel="noopener noreferrer">
