--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/aboutus.css">
+    <link rel="stylesheet" href="assets/css/bestservices.css">
     <link rel="stylesheet" href="assets/css/ourservice.css">
     <!-- End Style -->
 </head>
@@ -67,58 +69,125 @@
                 <img src="https://img.freepik.com/fotos-premium/composicao-de-negocios-de-reparacao-de-automoveis_23-2147881823.jpg?w=1380" alt="aa">
             </div>
         </div> -->
+        <section class="about-us">
+            <div class="about-us-title default-font">
+                ALGUMAS PALAVRAS
+                <p>
+                    SOBRE NÓS
+                </p>
+            </div>
+            <div class="about-us-body">
+                <p class="body open-sans-300">
+                    Seja bem-vindo à Carv Auto Center, seu centro automotivo de confiança em Avaré, SP. Somos dedicados
+                    a
+                    fornecer serviços de mecânica de alta qualidade para veículos de todos os tipos. Com uma equipe
+                    experiente e apaixonada, garantimos atenção especializada a cada veículo que entra em nossas
+                    instalações.
+                </p>
+            </div>
+            <button class="btn btn-more">
+                SAIBA MAIS
+            </button>
+        </section>
+        <section class="best-services">
+            <div class="p-0">
+                <img src="./assets/images/bestService.jpg">
+                <div class="best-services-blur"></div>
+            </div>
+            <div class="best-services-body">
+                <div class="best-service-title default-font">
+                    Nosso
+                    <p>
+                        compromisso
+                    </p>
+                </div>
+                <div class="best-service-body">
+                    <p class="body open-sans-300">
+                        Nosso compromisso é com a integridade, qualidade e respeito em cada interação. Valorizamos a
+                        confiança dos nossos clientes e nos esforçamos para oferecer soluções eficazes para suas
+                        necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
+                    </p>
+                </div>
+            </div>
+        </section>
         <section class="our-service">
+            <div class="our-service-img"></div>
+            <div class="our-service-img-blur"></div>
             <div class="our-service-title">
-                Nossos serviços
+                Nossos
+                <p>
+                    serviços
+                </p>
             </div>
             <div class="our-service-body">
-                <div class="card-service">
+                <div class="card-service shadow-lg rounded">
 
                     <div class="card-service-img">
-
+                        <img src="./assets/images/breakRepair.jpg">
                     </div>
                     <div class="card-service-detail">
-                        <p>
+                        <p class="title">
                             Reparação de freios
                         </p>
+                        <p class="body open-sans-300">
+                            Garantimos a segurança do seu veículo com nossa expertise em reparação de freios. Nossa
+                            equipe realiza inspeção, diagnóstico e reparo completo, desde substituição de pastilhas até
+                            troca de cilindros.
+                        </p>
                     </div>
                 </div>
-                <div class="card-service">
+                <div class="card-service shadow-lg rounded">
 
                     <div class="card-service-img">
-
+                        <img src="./assets/images/oil.jpg">
                     </div>
                     <div class="card-service-detail">
-                        <p>
+                        <p class="title">
                             Troca de óleo
                         </p>
-                    </div>
-                </div>
-                <div class="card-service">
-
-                    <div class="card-service-img">
-
-                    </div>
-                    <div class="card-service-detail">
-                        <p>
-                            Alinhamento e Balanceamento
+                        <p class="body open-sans-300">
+                            Mantemos seu motor em ótimo estado com nosso serviço de troca de óleo rápido e confiável.
+                            Usamos produtos de qualidade e seguimos as especificações do fabricante para garantir
+                            desempenho e longevidade.
                         </p>
                     </div>
                 </div>
-                <div class="card-service">
+                <div class="card-service shadow-lg rounded">
+                    <div class="card-service-img">
+                        <img src="./assets/images/suspension.jpg">
+                    </div>
+                    <div class="card-service-detail">
+                        <p class="title">
+                            Alinhamento e Balanceamento
+                        </p>
+                        <p class="body open-sans-300">
+                            Proporcionamos uma condução suave e segura com nossos serviços precisos de alinhamento e
+                            balanceamento. Com equipamentos modernos e técnico qualificado, corrigimos desgaste
+                            irregular, garantimos estabilidade e reduzimos vibrações.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-service shadow-lg rounded">
 
                     <div class="card-service-img">
+                        <img src="./assets/images/pneu.jpg">
 
                     </div>
                     <div class="card-service-detail">
-                        <p>
-                            Troca de pneu
+                        <p class="title">
+                            Reparação de pneu
+                        </p>
+                        <p class="body open-sans-300">
+                            Rapidamente restauramos a segurança do seu veículo com nossos serviços de reparação de
+                            pneus. Desde pequenos furos até danos significativos, nossa equipe realiza reparos
+                            profissionais, priorizando qualidade e durabilidade.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
-        <a class="btn-whats shadow-lg" href="https://wa.me/5514998464904" target="_blank" rel="noopener noreferrer">
+        <a class="btn-whats shadow-lg" href="https://wa.me/5514998464904?text=Tenho" target="_blank"
+            rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp fa-xl"></i>
         </a>
     </main>
