--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 
 <body id="root">
-    <header class="p-2 shadow-lg no-background">
+    <header class="p-2 shadow-lg no-background header-sys">
         <div class="d-flex align-items-center gap-2 justify-content-between px-5 no-padding">
             <a class="d-flex align-items-center gap-2 text-decoration-none"
                 href="https://maps.app.goo.gl/ezminvdswhyBt1ma6" target="_blank" rel="noopener noreferrer">
@@ -70,7 +70,7 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-md bg-transparent px-5 py-0 no-padding  no-background-nav">
-            <div class="container-fluid px-0">
+            <div class="container-fluid px-0 align-items-center">
                 <a class="navbar-brand logo d-flex rajdhani-bold" href="#">Carv <p class="rajdhani-light">Auto Center
                     </p></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -98,55 +98,68 @@
     </header>
     <main>
         <section class="owl-carousel owl-theme">
-            <div class="item">
-                <img src="/assets/images/banner2/banner1.jpeg" alt="aa">
+            <div class="item" style="background-image: url(/assets/images/banner3/banner1.jpg);">
             </div>
-            <div class="item">
+            <div class="item" style="background-image: url(/assets/images/banner3/banner2.jpg);">
+            </div>
+            <div class="item" style="background-image: url(/assets/images/banner3/banner3.jpg);">
+            </div>
+            <div class="item" style="background-image: url(/assets/images/banner3/banner4.jpg);">
+            </div>
+            <div class="item" style="background-image: url(/assets/images/banner3/banner5.jpg);">
+            </div>
+            <!-- <div class="item"> 
                 <img src="/assets/images/banner2/banner2.jpeg" alt="aa">
             </div>
             <div class="item">
                 <img src="assets/images/banner2/banner3.jpeg" alt="aa">
-            </div>
+            </div> -->
         </section>
         <section class="about-us">
-            <div class="about-us-title default-font rajdhani-light">
-                ALGUMAS PALAVRAS
-                <p class="rajdhani-bold">
-                    SOBRE NÓS
-                </p>
+            <div class="d-flex flex-column about-move align-items-center gap-4 " style="opacity: 1;">
+                <div class="about-us-title default-font rajdhani-light">
+                    ALGUMAS PALAVRAS
+                    <p class="rajdhani-bold">
+                        SOBRE NÓS
+                    </p>
+                </div>
+                <div class="about-us-body">
+                    <p class="body open-sans-300">
+                        Seja bem-vindo à Carv Auto Center, seu centro automotivo de confiança em Avaré, SP. Somos
+                        dedicados
+                        a
+                        fornecer serviços de mecânica de alta qualidade para veículos de todos os tipos. Com uma equipe
+                        experiente e apaixonada, garantimos atenção especializada a cada veículo que entra em nossas
+                        instalações.
+                    </p>
+                </div>
             </div>
-            <div class="about-us-body">
-                <p class="body open-sans-300">
-                    Seja bem-vindo à Carv Auto Center, seu centro automotivo de confiança em Avaré, SP. Somos dedicados
-                    a
-                    fornecer serviços de mecânica de alta qualidade para veículos de todos os tipos. Com uma equipe
-                    experiente e apaixonada, garantimos atenção especializada a cada veículo que entra em nossas
-                    instalações.
-                </p>
-            </div>
+
         </section>
         <section class="best-services">
-            <div class="p-0">
+            <div class="p-0 best-service-image">
                 <img src="./assets/images/result.jpg">
                 <div class="best-services-blur"></div>
             </div>
             <div class="best-services-body">
-                <div class="best-service-title rajdhani-light">
-                    Nosso
-                    <p>
-                        compromisso
-                    </p>
+                <div class="d-flex justify-content-center align-items-center flex-column best-services-body-content gap-5">
+                    <div class="best-service-title rajdhani-light">
+                        Nosso
+                        <p>
+                            compromisso
+                        </p>
+                    </div>
+                    <div class="best-service-body">
+                        <p class="body open-sans-300">
+                            Nosso compromisso é com a integridade, qualidade e respeito em cada interação. Valorizamos a
+                            confiança dos nossos clientes e nos esforçamos para oferecer soluções eficazes para suas
+                            necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
+                        </p>
+                    </div>
+                    <button class="btn btn-more-best">
+                        SAIBA MAIS
+                    </button>
                 </div>
-                <div class="best-service-body">
-                    <p class="body open-sans-300">
-                        Nosso compromisso é com a integridade, qualidade e respeito em cada interação. Valorizamos a
-                        confiança dos nossos clientes e nos esforçamos para oferecer soluções eficazes para suas
-                        necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
-                    </p>
-                </div>
-                <button class="btn btn-more-best">
-                    SAIBA MAIS
-                </button>
             </div>
         </section>
         <section class="our-advantages">
@@ -159,7 +172,7 @@
             <div class="our-advantages-body">
                 <div class="content row">
                     <div class="col-sm-12 col-md-6 d-flex gap-2 flex-row align-items-center justify-content-center">
-                        <div>
+                        <div class="left-advantages">
                             <h4 class="h4 align-right mb-2">Todas as marcas de carros</h4>
                             <p class="body open-sans-300 align-right">
                                 Oferecemos uma variedade de serviços de reparo e manutenção para todas as marcas e
@@ -171,8 +184,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 d-flex flex-row align-items-center justify-content-center">
                         <!-- <img src="./assets/images/maintenance.png"> -->
-                        <div>
-
+                        <div class="right-advantages">
                             <h4 class="h4 mb-2">Variedade de serviços</h4>
                             <p class="body open-sans-300">
                                 O principal do nosso trabalho é oferecer uma ampla gama de serviços de reparação
@@ -306,8 +318,9 @@
                     <div class="carousel-item active">
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
-                                <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
-                                    class="d-block w-100" alt="...">
+                                <!-- <img 
+                                src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
+                                    class="d-block w-100" alt="..."> -->
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -324,9 +337,9 @@
                     <div class="carousel-item">
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
-                                <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
+                                <!-- <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
                                     class="d-block w-100" alt="...">
-                                <i class="fa-solid fa-comment"></i>
+                                <i class="fa-solid fa-comment"></i> -->
                             </div>
                             <div class="w-50 content mt-4">
                                 <h4 class="h4 text-center rajdhani-bold">
@@ -342,8 +355,8 @@
                     <div class="carousel-item">
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
-                                <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
-                                    class="d-block w-100" alt="...">
+                                <!-- <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
+                                    class="d-block w-100" alt="..."> -->
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -418,10 +431,14 @@
     </footer>
     <script src="assets/jQuery/js/jQuery.min.js"></script>
     <script src="assets/OwlCarousel/dist/owl.carousel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
     <script src="https://kit.fontawesome.com/0c233eeafa.js" crossorigin="anonymous"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.js"></script>
     <script src="assets/js/header.js"></script>
+    <script src="assets/js/gsap.js"></script>
 </body>
 
 </html>
