--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             <div class="best-services-body">
                 <div class="d-flex justify-content-center align-items-center flex-column best-services-body-content gap-5">
                     <div class="best-service-title rajdhani-light">
-                        Nosso
+                        Nossa
                         <p>
-                            compromisso
+                            Compromisso
                         </p>
                     </div>
                     <div class="best-service-body">
@@ -156,9 +156,6 @@
                             necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
                         </p>
                     </div>
-                    <button class="btn btn-more-best">
-                        SAIBA MAIS
-                    </button>
                 </div>
             </div>
         </section>
@@ -211,9 +208,9 @@
                         atendam plenamente às suas expectativas.
                     </p>
                 </div>
-                <button class="btn btn-more-result">
+                <!-- <button class="btn btn-more-result">
                     SAIBA MAIS
-                </button>
+                </button> -->
             </div>
             <div class="p-0">
                 <img src="./assets/images/bestService.jpg">
@@ -232,9 +229,9 @@
                 </p>
             </div>
             <div class="our-service-body">
-                <div class="card-service shadow-lg rounded">
+                <div class="card-service shadow-lg rounded card-representation">
 
-                    <div class="card-service-img">
+                    <div class="card-service-img ">
                         <img src="./assets/images/breakRepair.jpg">
                     </div>
                     <div class="card-service-detail">
@@ -248,7 +245,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card-service shadow-lg rounded">
+                <div class="card-service shadow-lg rounded card-oleo">
 
                     <div class="card-service-img">
                         <img src="./assets/images/oil.jpg">
@@ -264,7 +261,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card-service shadow-lg rounded">
+                <div class="card-service shadow-lg rounded card-aliment">
                     <div class="card-service-img">
                         <img src="./assets/images/suspension.jpg">
                     </div>
@@ -279,7 +276,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card-service shadow-lg rounded">
+                <div class="card-service shadow-lg rounded card-pneu">
 
                     <div class="card-service-img">
                         <img src="./assets/images/pneu.jpg">
@@ -381,7 +378,7 @@
             </div>
             <div class="w-75">
                 <div class="row no-gap gap-4">
-                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-center">
+                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-center what-offer-one">
                         <div class="circle">
                             01
                         </div>
@@ -393,20 +390,21 @@
                             reparos necessários após a identificação de falhas.
                         </p>
                     </div>
-                    <div class="col-sm-12 col-md-4  d-flex flex-column align-items-center">
+                    <div class="col-sm-12 col-md-4  d-flex flex-column align-items-center what-offer-two">
                         <div class="circle">
                             02
                         </div>
-                        <h4 class="h4 mt-2 text-center text-white rajdhani-bold">Diagnóstico e Reparo de Sistemas
-                            Automotivos</h4>
+                        <h4 class="h4 mt-2 text-center text-white rajdhani-bold">Diagnóstico e Reparo de Suspensão</h4>
                         <p class="comment open-sans-300">
-                            Os serviços de diagnóstico envolvem a utilização de equipamentos especializados para
-                            identificar problemas em sistemas automotivos, como transmissão, suspensão, freios. Uma vez
-                            identificados, os técnicos realizam os reparos necessários para restaurar o desempenho
-                            adequado do veículo.
+                            Oferecemos um serviço especializado de diagnóstico e reparo da suspensão automotiva, garantindo o desempenho ideal do seu veículo. Nossa equipe utiliza técnicas avançadas e equipamentos especializados para identificar e corrigir problemas, incluindo ruídos, desgaste e desalinhamento. Mantenha sua condução suave, confortável e segura com a nossa expertise em suspensão automotiva.
+
+
+
+
+
                         </p>
                     </div>
-                    <div class="col-sm-12 col-md-4  d-flex flex-column align-items-center">
+                    <div class="col-sm-12 col-md-4  d-flex flex-column align-items-center what-offer-three">
                         <div class="circle">
                             03
                         </div>
